@@ -8,10 +8,10 @@
 <link rev="made" href="mailto:f.b.brokken@rug.nl">
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
-<hr>
-<h1>guncat</h1>
-<h2>guncat_1.01.01.tar.gz</h2>
-<h2>2014-2015</h2>
+<hr/>
+<h1 id="title">guncat</h1>
+<h2 id="author">guncat_1.01.02.tar.gz</h2>
+<h2 id="date">2014-2015</h2>
 
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
@@ -24,8 +24,8 @@
 <link rev="made" href="mailto:f.b.brokken@rug.nl">
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
-<hr>
-<h1></h1>
+<hr/>
+<h1 id="title"></h1>
 
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
@@ -41,20 +41,20 @@
 <link rev="made" href="mailto:f.b.brokken@rug.nl">
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
-<hr>
-<h1>guncat(1)</h1>
-<h2>guncat_1.01.01.tar.gz guncat - unencrypting file concatenation</h2>
-<h2>2014-2015</h2>
+<hr/>
+<h1 id="title">guncat(1)</h1>
+<h2 id="author">guncat_1.01.02.tar.gz guncat - unencrypting file concatenation</h2>
+<h2 id="date">2014-2015</h2>
 
 
 <p>
 <h2>NAME</h2>guncat - catenates files, unencrypting pgp encrypted sections
 <p>
 <h2>SYNOPSIS</h2>
-       <strong>guncat</strong> [OPTIONS] <code>[file(s)]</code> <br>
-        [OPTIONS] - cf. section <strong>OPTIONS</strong><br>
+       <strong>guncat</strong> [OPTIONS] <code>[file(s)]</code> <br/>
+        [OPTIONS] - cf. section <strong>OPTIONS</strong><br/>
         [file(s)] - optional files to process (cf. section <strong>INPUT
-            FILE(S)</strong>)<br>
+            FILE(S)</strong>)<br/>
 <p>
 <h2>DESCRIPTION</h2>
 <p>
@@ -123,46 +123,46 @@ Where available, single letter options are listed between parentheses
 following their associated long-option variants. Single letter options require
 arguments if their associated long options require arguments as well.
     <ul>
-    <li> <strong>--gpg</strong>=<code>path</code><br>
+    <li> <strong>--gpg</strong>=<code>path</code><br/>
         Path to the <strong>gpg</strong> program (default: <code>/usr/bin/gpg</code>)
 <p>
-<li> <strong>--gpg-msg</strong>=<code>path</code> (<strong>-m</strong>)<br>
+<li> <strong>--gpg-msg</strong>=<code>path</code> (<strong>-m</strong>)<br/>
         Path to where <strong>gpg</strong> should write its messages. Specify - to write
         the messages to the standard error stream. By default messages are
         suppressed. 
 <p>
-<li> <strong>--gpg-no-batch</strong><br>
+<li> <strong>--gpg-no-batch</strong><br/>
         Option <code>--batch</code> is omitted when calling <strong>gpg</strong>.
 <p>
-<li> <strong>--gpg-option</strong>=<code>option</code> (<strong>-m</strong>)<br>
+<li> <strong>--gpg-option</strong>=<code>option</code> (<strong>-m</strong>)<br/>
        Add <code>option</code> to <strong>gpg</strong>'s call. If the option contains blanks, surround
         <code>option</code> by single or double quotes.
 <p>
-<li> <strong>--help</strong> (<strong>-h</strong>)<br>
+<li> <strong>--help</strong> (<strong>-h</strong>)<br/>
        Basic usage information is written to the standard output stream.
 <p>
-<li> <strong>--locate-keys</strong> <strong>-l</strong><br> 
+<li> <strong>--locate-keys</strong> <strong>-l</strong><br/> 
        Locate missing public keys at the configured key server(s) (by default
         missing keys are not searched for).
 <p>
-<li> <strong>--passphrase</strong> <strong>-p</strong><br> 
+<li> <strong>--passphrase</strong> <strong>-p</strong><br/> 
        The passphrase is read as the first line from the standard input stream
         (without being echoed); otherwise the passphrase is handled by <strong>gpg</strong>
         itself (e.g., using <strong>gpg-agent</strong>(1)).
 <p>
-<li> <strong>--show-gpg</strong><br> 
+<li> <strong>--show-gpg</strong><br/> 
        Show the gpg command that would be used, and quit, returning 0.
 <p>
-<li> <strong>--tty-OK</strong> <strong>-t</strong><br> 
+<li> <strong>--tty-OK</strong> <strong>-t</strong><br/> 
        Option <code>--no-tty</code> is omitted when calling <strong>gpg</strong>.
 <p>
-<li> <strong>--verbose</strong>=<code>[0-2]</code><br>
+<li> <strong>--verbose</strong>=<code>[0-2]</code><br/>
        Specifies <strong>gpg</strong>'s verbosity level. When calling <strong>gpg</strong>, by default
         <code>--quiet</code> is specified; with <code>--verbose 0</code> <strong>gpg</strong>'s option
         <code>--no-verbose</code> is specified; otherwise <code>--verbose</code> is specified
         once or twice.
 <p>
-<li> <strong>--version</strong> (<strong>-v</strong>)<br>
+<li> <strong>--version</strong> (<strong>-v</strong>)<br/>
        <strong>Guncat</strong>'s version number is written to the standard output stream.
     </ul> 
 <p>
