@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Guncat V 1.01.01</title>
+<title>Guncat V 1.01.02</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -10,11 +10,11 @@
 <link rev="made" href="mailto:f.b.brokken@rug.nl">
 </head>
 <body>
-<hr>
-<h1>Guncat V 1.01.01</h1>
-<h2>Frank B. Brokken (f.b.brokken@rug.nl)<br></h2>
+<hr/>
+<h1 id="title">Guncat V 1.01.02</h1>
+<h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
-<h2>Center for Information Technology, University of Groningen</h2><h2>2014-2015</h2>
+<h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">2014-2015</h2>
 
 
 <p>
@@ -34,14 +34,14 @@ by its tag or download the matching <code>.zip</code> or <code>.tar.gz</code> fr
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/guncat/releases/tag/1.01.02">1.01.02</a>
+Dec 13, 2015;
         <li> <a href="https://github.com/fbb-git/guncat/releases/tag/1.01.01">1.01.01</a>
 Oct  6, 2015;
         <li> <a href="https://github.com/fbb-git/guncat/releases/tag/1.01.00">1.01.00</a>
 Oct  4, 2015;
         <li> <a href="https://github.com/fbb-git/guncat/releases/tag/0.92.00">0.92.00</a>
-May 27, 2014;
-        <li> <a href="https://github.com/fbb-git/guncat/releases/tag/0.90.00">0.91.00</a>
-May 4, 2014.
+May 27, 2014.
         </ul>
     
 <p>
