@@ -1,3 +1,9 @@
+guncat (1.01.02)
+
+  * Updated the build script to icmake 8.00.04
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 12 Dec 2015 15:12:24 +0100
+
 guncat (1.01.01)
 
   * Kevin Brodsky observed that the installation scripts used 'chdir' rather
